--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     "@angular/core": "2.0.1",
     "@angular/forms": "2.0.1",
     "@angular/http": "2.0.1",
+    "@angular/material": "^2.0.0-beta.1",
     "@angular/platform-browser": "2.0.1",
     "@angular/platform-browser-dynamic": "2.0.1",
     "@angular/platform-server": "2.0.1",
     "@angular/router": "3.0.1",
     "@angular/upgrade": "2.0.1",
     "bcryptjs": "^2.3.0",
-    "jsonwebtoken": "^5.7.0",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "core-js": "^2.4.1",
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "hbs": "~4.0.0",
+    "jsonwebtoken": "^5.7.0",
     "mongoose": "^4.7.2",
     "mongoose-unique-validator": "^1.0.3",
     "morgan": "~1.7.0",
